section add code

--- a/index.html
+++ b/index.html
@@ -215,6 +215,79 @@
           </div>
         </div>
       </section>
+
+      <!-- section three -->
+      <section class="special-items-section bg-green-50 py-16">
+        <div class="container mx-auto flex flex-col lg:flex-row items-center">
+          <!-- Image Grid -->
+          <div class="lg:w-1/2 grid grid-cols-2 gap-6 transform rotate-[-5deg]">
+            <div
+              class="relative bg-white p-4 rounded-lg shadow-lg transform rotate-[5deg]"
+            >
+              <img
+                src="./images/Rectangle 360.png"
+                alt="Cucumber"
+                class="rounded-lg"
+              />
+            </div>
+            <div
+              class="relative bg-white p-4 rounded-lg shadow-lg transform rotate-[10deg]"
+            >
+              <img
+                src="./images/image 29.png"
+                alt="Oranges"
+                class="rounded-lg"
+              />
+            </div>
+            <div
+              class="relative bg-white p-4 rounded-lg shadow-lg transform rotate-[-10deg]"
+            >
+              <img src="./images/image 31.png" alt="Apple" class="rounded-lg" />
+            </div>
+            <div
+              class="relative bg-white p-4 rounded-lg shadow-lg transform rotate-[5deg]"
+            >
+              <img
+                src="./images/bok-choy-white-wall_55883-10867.png"
+                alt="Greens"
+                class="rounded-lg"
+              />
+            </div>
+          </div>
+
+          <!-- Text Content -->
+          <div class="lg:w-1/2 text-center lg:text-left lg:pl-10 mt-10 lg:mt-0">
+            <h2 class="text-4xl font-bold text-gray-800 mb-4">
+              Explore Our Special Items
+            </h2>
+            <p class="text-gray-600 mb-6">
+              Lorem Ipsum is simply dummy text of the printing and typesetting
+              industry. Lorem Ipsum has been the industry's standard dummy text
+              ever since the 1500s, when an unknown printer...
+            </p>
+            <a
+              href="#"
+              class="text-black py-3 px-8 rounded-full flex items-center justify-center gap-2 hover:transition"
+            >
+              Explore Now
+              <span
+                class="bg-white text-green-600 w-8 h-8 rounded-full flex items-center justify-center text-lg shadow-md"
+              >
+                &rarr;
+              </span>
+            </a>
+
+            <!-- Additional Images Below the Button -->
+            <div class="flex justify-center lg:justify-start gap-4 mt-6">
+              <img
+                src="./images/fresh-melientha-suavis-pierre-leaves-white-surface_51524-12145.png"
+                alt="Bell Peppers"
+                class="max-w-xs md:max-w-md lg:max-w-lg object-contain"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- Footer Section -->
