Add info section

--- a/index.html
+++ b/index.html
@@ -216,6 +216,50 @@
         </div>
       </section>
 
+      <section class="second-section w-full mt-10">
+        <div class="container w-11/12 mx-auto flex">
+          <div class="left-box w-1/2">
+            <div class="info-box">
+              <h2 class="font-mono text-5xl">Why We Are The Best ?</h2>
+              <p class="font-serif text-xl mt-5 text-gray-400">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley...</p>
+            </div>
+            <ul class="mt-5">
+              <li class="w-fit flex gap-5 items-center justify-center">
+                <div class="img-box bg-green-100 w-28 h-28 rounded-full flex items-center justify-center ml-4">
+                  <img src="/images/delivery-man 2.png" alt="" class="w-20">
+                </div>
+                <div class="info-box flex flex-col justify-center">
+                  <h4 class="font-mono text-2xl">Faster delivery Service</h4>
+                  <p class="text-gray-400">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry.</p>
+                </div>
+              </li>
+              <li class="flex gap-5 mt-5 bg-green-100 h-36 items-center">
+                <div class="img-box bg-white w-28 h-28 rounded-full flex items-center justify-center ml-4">
+                  <img src="/images/shopping 1.png" alt="" class="w-20">
+                </div>
+                <div class="info-box flex flex-col justify-center">
+                  <h4 class="font-mono text-2xl">Online order Service</h4>
+                  <p class="text-gray-400">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry.</p>
+                </div>
+              </li>
+              <li class="w-fit flex gap-5 items-center justify-center mt-5">
+                <div class="img-box bg-green-100 w-28 h-28 rounded-full flex items-center justify-center ml-4">
+                  <img src="/images/fast-time 1.png" alt="" class="w-20">
+                </div>
+                <div class="info-box flex flex-col justify-center">
+                  <h4 class="font-mono text-2xl">24/8 Service</h4>
+                  <p class="text-gray-400">Lorem Ipsum is simply dummy text of the <br> printing and typesetting industry.</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="right-box relative">
+            <img src="/images/man-grocery.png" alt="" class="absolute top-10 left-64">
+            <img src="/images/Ellipse 141.png" alt="" class="ml-56 mt-28">
+          </div>
+        </div>
+      </section>
+
       <section class="special-items-section bg-green-50 py-16">
         <div class="container mx-auto flex flex-col lg:flex-row items-center">
           <!-- Image Grid -->
